
@startuml

class GenericDFS<Vertex extends GenericVertex> {
    -Graph<Vertex> graph;
    -Vertex currentVertex;

    -Set<Vertex> visited;
    -boolean stop;

    +GenericDFS(Graph<Vertex> graph)
    +GenericDFS(Graph<Vertex> graph, Vertex currentVertex)

    #abstract void unvisitedVertex(Vertex vertex)
    #abstract void alreadyVisitedVertex(Vertex vertex)
    #abstract List<Vertex> getAdjacent(Vertex vertex)
    #void setCurrentVertex(Vertex currentVertex)
    #Graph<Vertex> getGraph()
    #void stop()
    #boolean wasStopped()
    #void runDFS()

    -void tryVisitNext(final Stack<StackVertex<Vertex>> vertexStack)
    -StackVertex<Vertex> visitNext(Vertex vertex)

}

class Graph< Vertex extends GenericVertex >  implements Serializable {
        -Map<Integer, Vertex> idToVertex;
        -List<Vertex> vertices;
        -EdgeList<Vertex> edges;
        -int largestId;

        +Graph()
        +void registerVertex(Vertex vertex)
        +Vertex getVertexById(int id)
        +void addEdge(final Vertex vertexFrom, final Vertex vertexTo)
        +List<Vertex> getForwardEdges(final Vertex vertex)
        +List<Vertex> getVertices()
        +void removeEdge(final Vertex vertexFrom, final Vertex vertexTo)
        +boolean removeEdge(int fromId, int toId)
        +void removeVertex(final Vertex vertex)
        +List<Vertex> getBackwardEdges(final Vertex vertex)
        -List<Vertex> getEndVertices(final List<Edge> edgeList)
        -int getNextId()
}

class CycleChecker<Vertex extends GenericVertex> extends GenericDFS {
    - Map<Vertex, Integer> visitedInIteration;
    - Set<Vertex> remainingVertices;
    - int currentIteration;

    + CycleChecker(Graph<Vertex> graph)

    + boolean hasCycle()
    # void unvisitedVertex(final Vertex vertex)
    # void alreadyVisitedVertex(final Vertex vertex)
    # List<Vertex> getAdjacent(final Vertex vertex)

    - void visitedNewVertex(final Vertex vertex)
}

CycleChecker o-- Graph
GenericDFS o-- Graph

@enduml

